add final edits to html, css, javascript
Co-authored-by: Drew Henderson <drewhendersonemail@gmail.com>
Co-authored-by: Karon Axom <kaxomwa@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,29 +15,36 @@
         <div class="radio">
           <label>
             <input type="radio" name="animal" value="toucan" checked />
-            Sloth
+            Toucan
           </label>
         </div>
+
         <div class="radio">
           <label>
             <input type="radio" name="animal" value="sloth" />
-            Howler Monkey
+            Sloth
           </label>
         </div>
+
         <div class="radio">
           <label>
             <input type="radio" name="animal" value="howlermonkey" />
-            Tucan
+            Howler Monkey
           </label>
         </div>
+
+        <div>
+          <button type="submit" class="btn">See Picture</button>
+        </div>
       </form>
-
-      <img src="js/img/toucan.jpg" alt="toucan" id="toucan" />
-      <img src="js/img/sloths.jpg" alt="sloth" id="sloths" />
-      <img src="js/img/howlermonkey.jpg" alt="howlermonkey" id="howlermonkey" />
-
       <div>
-        <button type="submit" class="btn">See Picture</button>
+        <img src="js/img/toucan.jpg" alt="toucan" id="toucan" />
+        <img src="js/img/sloths.jpg" alt="sloth" id="sloth" />
+        <img
+          src="js/img/howlermonkey.jpg"
+          alt="howlermonkey"
+          id="howlermonkey"
+        />
       </div>
     </div>
   </body>
